--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="productport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфолио</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Студия</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,33 +17,39 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
-    <header class="header no-hero">
-      <div class="container">
-        <nav class="main-nav">
-          <a href="#" class="logo link"><span>Web</span>Studio</a>
-          <ul class="site-nav list">
-            <li class="item">
-              <a href="./index.html" class="link">Студия</a>
+    <header class="header no-hero__header">
+      <div class="container header__container">
+        <nav class="header__nav">
+          <a href="#" class="logo header__logo"><span class="logo--highlight">Web</span>Studio</a>
+          <ul class="main-nav">
+            <li class="main-nav__item">
+              <a href="./index.html" class="main-nav__link">Студия</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="current link">Портфолио</a>
+            <li class="main-nav__item">
+              <a href="./portfolio.html" class="main-nav__link main-nav__link--current"
+                >Портфолио</a
+              >
             </li>
-            <li class="item"><a href="" class="link">Контакты</a></li>
+            <li class="main-nav__item"><a href="#" class="main-nav__link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contacts list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="contact link">
-              <svg class="icon-contact">
+        <ul class="contacts-list contacts-list--vertical">
+          <li class="contacts-list__item">
+            <a
+              href="mailto:info@devstudio.com"
+              class="contacts-list__link contacts-list__link--horizontal"
+            >
+              <svg class="contacts-list__icon">
                 <use href="./images/sprite.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="contact link">
-              <svg class="icon-contact">
+          <li class="contacts-list__item">
+            <a href="tel:+380961111111" class="contacts-list__link contacts-list__link--horizontal">
+              <svg class="contacts-list__icon">
                 <use href="./images/sprite.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -52,159 +58,159 @@
         </ul>
       </div>
     </header>
-
     <main>
-      <section class="section products">
+      <section class="section products__section">
         <div class="container">
-          <h1 class="section-title visually-hidden">Product gallery</h1>
-          <ul class="view-switch list">
-            <li class="product-type">
-              <button class="button primary">Все</button>
+          <h1 class="section__title visually-hidden">Product gallery</h1>
+          <ul class="products-view">
+            <li class="product-view__category">
+              <button class="button button--primary products__button">Все</button>
             </li>
-            <li class="product-type">
-              <button class="button secondary">Веб-сайты</button>
+            <li class="product-view__category">
+              <button class="button button--secondary products__button">Веб-сайты</button>
             </li>
-            <li class="product-type">
-              <button class="button secondary">Приложения</button>
+            <li class="product-view__category">
+              <button class="button button--secondary products__button">Приложения</button>
             </li>
-            <li class="product-type">
-              <button class="button secondary">Дизайн</button>
+            <li class="product-view__category">
+              <button class="button button--secondary products__button">Дизайн</button>
             </li>
-            <li class="product-type">
-              <button class="button secondary">Маркетинг</button>
+            <li class="product-view__category">
+              <button class="button button--secondary products__button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="product-cards list">
-            <li class="card">
-              <a href="#" class="link">
-                <div class="card-thumb">
+          <ul class="card-set card-set--products">
+            <li class="card-set__item card-set__item--product">
+              <a href="#" class="product">
+                <div class="product__thumb">
                   <img
                     src="./images/product-gallery/techcrack.jpg"
                     width="370"
                     alt="Технокряк"
-                    class="card-img"
+                    class="product__img"
                   />
-                  <p class="text">
+                  <p class="product__popup-text">
+                    <!-- switch names text and descr -->
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="card-descr">
-                  <h2 class="title">Технокряк</h2>
-                  <p class="text">Веб-сайт</p>
+                <div class="product__descr">
+                  <h2 class="product__title">Технокряк</h2>
+                  <p class="product__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="card">
-              <a href="#" class="link">
+            <li class="card-set__item card-set__item--product">
+              <a href="#" class="product">
                 <img
                   src="./images/product-gallery/novsgs.jpg"
                   width="370"
                   alt="Постер"
-                  class="card-img"
+                  class="product__img"
                 />
-                <div class="card-descr">
-                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                  <p class="text">Дизайн</p>
+                <div class="product__descr">
+                  <h2 class="product__title">Постер New Orlean vs Golden Star</h2>
+                  <p class="product__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="card">
-              <a href="#" class="link">
+            <li class="card-set__item card-set__item--product">
+              <a href="#" class="product">
                 <img
                   src="./images/product-gallery/seafood.jpg"
                   width="370"
                   alt="Логотип"
-                  class="card-img"
+                  class="product__img"
                 />
-                <div class="card-descr">
-                  <h2 class="title">Ресторан Seafood</h2>
-                  <p class="text">Приложение</p>
+                <div class="product__descr">
+                  <h2 class="product__title">Ресторан Seafood</h2>
+                  <p class="product__text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="card">
-              <a href="#" class="link">
+            <li class="card-set__item card-set__item--product">
+              <a href="#" class="product">
                 <img
                   src="./images/product-gallery/prime.jpg"
                   width="370"
                   alt="Наушники"
-                  class="card-img"
+                  class="product__img"
                 />
-                <div class="card-descr">
-                  <h2 class="title">Проект Prime</h2>
-                  <p class="text">Маркетинг</p>
+                <div class="product__descr">
+                  <h2 class="product__title">Проект Prime</h2>
+                  <p class="product__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="card">
-              <a href="#" class="link">
+            <li class="card-set__item card-set__item--product">
+              <a href="#" class="product">
                 <img
                   src="./images/product-gallery/boxes.jpg"
                   width="370"
                   alt="Коробки"
-                  class="card-img"
+                  class="product__img"
                 />
-                <div class="card-descr">
-                  <h2 class="title">Проект Boxes</h2>
-                  <p class="text">Приложение</p>
+                <div class="product__descr">
+                  <h2 class="product__title">Проект Boxes</h2>
+                  <p class="product__text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="card">
-              <a href="#" class="link">
+            <li class="card-set__item card-set__item--product">
+              <a href="#" class="product">
                 <img
                   src="./images/product-gallery/inspiration.jpg"
                   width="370"
                   alt="Inspiration"
-                  class="card-img"
+                  class="product__img"
                 />
-                <div class="card-descr">
-                  <h2 class="title">Inspiration has no Borders</h2>
-                  <p class="text">Веб-сайт</p>
+                <div class="product__descr">
+                  <h2 class="product__title">Inspiration has no Borders</h2>
+                  <p class="product__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="card">
-              <a href="#" class="link">
+            <li class="card-set__item card-set__item--product">
+              <a href="#" class="product">
                 <img
                   src="./images/product-gallery/limited.jpg"
                   width="370"
                   alt="Книга"
-                  class="card-img"
+                  class="product__img"
                 />
-                <div class="card-descr">
-                  <h2 class="title">Издание Limited Edition</h2>
-                  <p class="text">Дизайн</p>
+                <div class="product__descr">
+                  <h2 class="product__title">Издание Limited Edition</h2>
+                  <p class="product__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="card">
-              <a href="#" class="link">
+            <li class="card-set__item card-set__item--product">
+              <a href="#" class="product">
                 <img
                   src="./images/product-gallery/lab.jpg"
                   width="370"
                   alt="Label"
-                  class="card-img"
+                  class="product__img"
                 />
-                <div class="card-descr">
-                  <h2 class="title">Проект LAB</h2>
-                  <p class="text">Маркетинг</p>
+                <div class="product__descr">
+                  <h2 class="product__title">Проект LAB</h2>
+                  <p class="product__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="card">
-              <a href="#" class="link">
+            <li class="card-set__item card-set__item--product">
+              <a href="#" class="product">
                 <img
                   src="./images/product-gallery/growing.jpg"
                   width="370"
                   alt="Business tool"
-                  class="card-img"
+                  class="product__img"
                 />
-                <div class="card-descr">
-                  <h2 class="title">Growing Business</h2>
-                  <p class="text">Приложение</p>
+                <div class="product__descr">
+                  <h2 class="product__title">Growing Business</h2>
+                  <p class="product__text">Приложение</p>
                 </div>
               </a>
             </li>
@@ -215,62 +221,69 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="info-block">
-          <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
-          <ul class="contacts list">
-            <li>
-              <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <div class="footer__info">
+          <a href="#" class="logo footer__logo"><span class="logo--highlight">Web</span>Studio</a>
+          <ul class="contacts-list">
+            <li class="contacts-list__item">
+              <address class="contacts-list__address">г. Киев, пр-т Леси Украинки, 26</address>
             </li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
+            <li class="contacts-list__item">
+              <a href="mailto:info@devstudio.com" class="contacts-list__link">info@devstudio.com</a>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="contact link">+38 096 111 11 11</a>
+            <li class="contacts-list__item">
+              <a href="tel:+380961111111" class="contacts-list__link">+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
-        <div class="join-us">
-          <b class="text">присоединяйтесь</b>
-          <ul class="social-links list">
-            <li class="item">
-              <a href="#" class="link" aria-label="Instagram">
-                <svg class="icon-social" width="20" height="20">
+        <div class="footer__join-us">
+          <b class="footer__text">присоединяйтесь</b>
+          <ul class="social-list footer__social-list">
+            <li class="social-list__item">
+              <a href="#" class="social-link" aria-label="Instagram">
+                <svg class="social-link__icon" width="20" height="20">
                   <use href="./images/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
-              <a href="#" class="link" aria-label="Twitter">
-                <svg class="icon-social" width="20" height="20">
+            <li class="social-list__item">
+              <a href="#" class="social-link" aria-label="Twitter">
+                <svg class="social-link__icon" width="20" height="20">
                   <use href="./images/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
+            <li class="social-list__item">
               <a href="#" class="link" aria-label="Facebook">
-                <svg class="icon-social" width="20" height="20">
+                <svg class="social-link__icon-social" width="20" height="20">
                   <use href="./images/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
+            <li class="social-list__item">
               <a href="#" class="link" aria-label="Linkedin">
-                <svg class="icon-social" width="20" height="20">
+                <svg class="social-link__icon-social" width="20" height="20">
                   <use href="./images/sprite.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <form class="subscribe form">
+        <form class="sub-form">
           <b class="text">Подпишитесь на рассылку</b>
-          <div class="form-field">
-            <input class="form-input" type="email" name="mail" id="mail" placeholder="E-mail" />
-            <label class="form-label" for="mail">E-mail</label>
+          <div class="sub-form__field">
+            <input
+              class="sub-form__input"
+              type="email"
+              name="mail"
+              id="mail"
+              placeholder="E-mail"
+            />
+            <label class="sub-form__label" for="mail">E-mail</label>
           </div>
-          <button class="button primary" type="submit">
-            <span class="text">Подписаться</span>
-            <span class="icon-subscribe">
+          <button class="button button--primary footer__button--primary" type="submit">
+            <!-- CHECK APPEARANCE: WHICH CLASS WILL BE USED FOR BTN COLORS / WHICH FOR GEOMETRY - MODIFY SPECIFIC CLASS -->
+            <span class="button__text">Подписаться</span>
+            <span class="button__sub-icon">
               <svg width="24" height="24">
                 <use href="./images/sprite.svg#submit"></use>
               </svg>
