--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
           </ul>
         </nav>
         <ul class="contacts-list contacts-list--vertical">
-          <li class="contacts-list__item">
+          <li class="contacts-list__item contacts-list__item--horizontal">
             <a
               href="mailto:info@devstudio.com"
               class="contacts-list__link contacts-list__link--horizontal"
@@ -47,7 +47,7 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="contacts-list__item">
+          <li class="contacts-list__item contacts-list__item--horizontal">
             <a href="tel:+380961111111" class="contacts-list__link contacts-list__link--horizontal">
               <svg class="contacts-list__icon">
                 <use href="./images/sprite.svg#smartphone"></use>
@@ -220,18 +220,24 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="container footer_container">
         <div class="footer__info">
           <a href="#" class="logo footer__logo"><span class="logo--highlight">Web</span>Studio</a>
-          <ul class="contacts-list">
-            <li class="contacts-list__item">
+          <ul class="contacts-list footer__contacts-list">
+            <li class="contacts-list__item contacts-list__item--vertical">
               <address class="contacts-list__address">г. Киев, пр-т Леси Украинки, 26</address>
             </li>
-            <li class="contacts-list__item">
-              <a href="mailto:info@devstudio.com" class="contacts-list__link">info@devstudio.com</a>
+            <li class="contacts-list__item contacts-list__item--vertical">
+              <a
+                href="mailto:info@devstudio.com"
+                class="contacts-list__link contacts-list__link--vertical"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="contacts-list__item">
-              <a href="tel:+380961111111" class="contacts-list__link">+38 096 111 11 11</a>
+            <li class="contacts-list__item contacts-list__item--vertical">
+              <a href="tel:+380961111111" class="contacts-list__link contacts-list__link--vertical"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
@@ -239,29 +245,29 @@
           <b class="footer__text">присоединяйтесь</b>
           <ul class="social-list footer__social-list">
             <li class="social-list__item">
-              <a href="#" class="social-link" aria-label="Instagram">
-                <svg class="social-link__icon" width="20" height="20">
+              <a href="#" class="social-link social-link--dark" aria-label="Instagram">
+                <svg class="social-link__icon social-link__icon--dark" width="20" height="20">
                   <use href="./images/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list__item">
-              <a href="#" class="social-link" aria-label="Twitter">
-                <svg class="social-link__icon" width="20" height="20">
+              <a href="#" class="social-link social-link--dark" aria-label="Twitter">
+                <svg class="social-link__icon social-link__icon--dark" width="20" height="20">
                   <use href="./images/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list__item">
-              <a href="#" class="link" aria-label="Facebook">
-                <svg class="social-link__icon-social" width="20" height="20">
+              <a href="#" class="social-link social-link--dark" aria-label="Facebook">
+                <svg class="social-link__icon social-link__icon--dark" width="20" height="20">
                   <use href="./images/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list__item">
-              <a href="#" class="link" aria-label="Linkedin">
-                <svg class="social-link__icon-social" width="20" height="20">
+              <a href="#" class="social-link social-link--dark" aria-label="Linkedin">
+                <svg class="social-link__icon social-link__icon--dark" width="20" height="20">
                   <use href="./images/sprite.svg#linkedin"></use>
                 </svg>
               </a>
@@ -269,7 +275,7 @@
           </ul>
         </div>
         <form class="sub-form">
-          <b class="text">Подпишитесь на рассылку</b>
+          <b class="sub-form__text">Подпишитесь на рассылку</b>
           <div class="sub-form__field">
             <input
               class="sub-form__input"
@@ -281,7 +287,6 @@
             <label class="sub-form__label" for="mail">E-mail</label>
           </div>
           <button class="button button--primary footer__button--primary" type="submit">
-            <!-- CHECK APPEARANCE: WHICH CLASS WILL BE USED FOR BTN COLORS / WHICH FOR GEOMETRY - MODIFY SPECIFIC CLASS -->
             <span class="button__text">Подписаться</span>
             <span class="button__sub-icon">
               <svg width="24" height="24">
