--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
@@ -379,7 +375,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container footer_container">
+      <div class="container footer__container">
         <div class="footer__info">
           <a href="#" class="logo footer__logo"><span class="logo--highlight">Web</span>Studio</a>
           <ul class="contacts-list footer__contacts-list">
