Added sass (except modal)

--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
             />
             <label class="sub-form__label" for="mail">E-mail</label>
           </div>
-          <button class="button button--primary footer__button--primary" type="submit">
-            <span class="button__text">Подписаться</span>
-            <span class="button__sub-icon">
+          <button class="button button--primary sub-button" type="submit">
+            <span class="sub-button__text">Подписаться</span>
+            <span class="sub-button__sub-icon">
               <svg width="24" height="24">
                 <use href="./images/sprite.svg#submit"></use>
               </svg>
