--- a/portfolio.html
+++ b/portfolio.html
@@ -94,12 +94,20 @@
             </li>
             <li class="card-set__item card-set__item--product">
               <a href="#" class="product">
-                <img
-                  src="./images/product-gallery/novsgs.jpg"
-                  width="370"
-                  alt="Постер"
-                  class="product__img"
-                />
+                <div class="product__thumb">
+                  <img
+                    src="./images/product-gallery/novsgs.jpg"
+                    width="370"
+                    alt="Постер"
+                    class="product__img"
+                  />
+                  <p class="product__popup-text">
+                    <!-- switch names text and descr -->
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="product__descr">
                   <h2 class="product__title">Постер New Orlean vs Golden Star</h2>
                   <p class="product__text">Дизайн</p>
@@ -108,12 +116,20 @@
             </li>
             <li class="card-set__item card-set__item--product">
               <a href="#" class="product">
-                <img
-                  src="./images/product-gallery/seafood.jpg"
-                  width="370"
-                  alt="Логотип"
-                  class="product__img"
-                />
+                <div class="product__thumb">
+                  <img
+                    src="./images/product-gallery/seafood.jpg"
+                    width="370"
+                    alt="Логотип"
+                    class="product__img"
+                  />
+                  <p class="product__popup-text">
+                    <!-- switch names text and descr -->
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="product__descr">
                   <h2 class="product__title">Ресторан Seafood</h2>
                   <p class="product__text">Приложение</p>
@@ -122,12 +138,20 @@
             </li>
             <li class="card-set__item card-set__item--product">
               <a href="#" class="product">
-                <img
-                  src="./images/product-gallery/prime.jpg"
-                  width="370"
-                  alt="Наушники"
-                  class="product__img"
-                />
+                <div class="product__thumb">
+                  <img
+                    src="./images/product-gallery/prime.jpg"
+                    width="370"
+                    alt="Наушники"
+                    class="product__img"
+                  />
+                  <p class="product__popup-text">
+                    <!-- switch names text and descr -->
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="product__descr">
                   <h2 class="product__title">Проект Prime</h2>
                   <p class="product__text">Маркетинг</p>
@@ -136,12 +160,20 @@
             </li>
             <li class="card-set__item card-set__item--product">
               <a href="#" class="product">
-                <img
-                  src="./images/product-gallery/boxes.jpg"
-                  width="370"
-                  alt="Коробки"
-                  class="product__img"
-                />
+                <div class="product__thumb">
+                  <img
+                    src="./images/product-gallery/boxes.jpg"
+                    width="370"
+                    alt="Коробки"
+                    class="product__img"
+                  />
+                  <p class="product__popup-text">
+                    <!-- switch names text and descr -->
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="product__descr">
                   <h2 class="product__title">Проект Boxes</h2>
                   <p class="product__text">Приложение</p>
@@ -150,12 +182,20 @@
             </li>
             <li class="card-set__item card-set__item--product">
               <a href="#" class="product">
-                <img
-                  src="./images/product-gallery/inspiration.jpg"
-                  width="370"
-                  alt="Inspiration"
-                  class="product__img"
-                />
+                <div class="product__thumb">
+                  <img
+                    src="./images/product-gallery/inspiration.jpg"
+                    width="370"
+                    alt="Inspiration"
+                    class="product__img"
+                  />
+                  <p class="product__popup-text">
+                    <!-- switch names text and descr -->
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="product__descr">
                   <h2 class="product__title">Inspiration has no Borders</h2>
                   <p class="product__text">Веб-сайт</p>
@@ -164,12 +204,20 @@
             </li>
             <li class="card-set__item card-set__item--product">
               <a href="#" class="product">
-                <img
-                  src="./images/product-gallery/limited.jpg"
-                  width="370"
-                  alt="Книга"
-                  class="product__img"
-                />
+                <div class="product__thumb">
+                  <img
+                    src="./images/product-gallery/limited.jpg"
+                    width="370"
+                    alt="Книга"
+                    class="product__img"
+                  />
+                  <p class="product__popup-text">
+                    <!-- switch names text and descr -->
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="product__descr">
                   <h2 class="product__title">Издание Limited Edition</h2>
                   <p class="product__text">Дизайн</p>
@@ -178,12 +226,20 @@
             </li>
             <li class="card-set__item card-set__item--product">
               <a href="#" class="product">
-                <img
-                  src="./images/product-gallery/lab.jpg"
-                  width="370"
-                  alt="Label"
-                  class="product__img"
-                />
+                <div class="product__thumb">
+                  <img
+                    src="./images/product-gallery/lab.jpg"
+                    width="370"
+                    alt="Label"
+                    class="product__img"
+                  />
+                  <p class="product__popup-text">
+                    <!-- switch names text and descr -->
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="product__descr">
                   <h2 class="product__title">Проект LAB</h2>
                   <p class="product__text">Маркетинг</p>
@@ -192,12 +248,20 @@
             </li>
             <li class="card-set__item card-set__item--product">
               <a href="#" class="product">
-                <img
-                  src="./images/product-gallery/growing.jpg"
-                  width="370"
-                  alt="Business tool"
-                  class="product__img"
-                />
+                <div class="product__thumb">
+                  <img
+                    src="./images/product-gallery/growing.jpg"
+                    width="370"
+                    alt="Business tool"
+                    class="product__img"
+                  />
+                  <p class="product__popup-text">
+                    <!-- switch names text and descr -->
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="product__descr">
                   <h2 class="product__title">Growing Business</h2>
                   <p class="product__text">Приложение</p>
