Modal form margin edits

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
               </svg>
             </span>
           </div>
-          <div class="form-order__field">
+          <div class="form-order__field form-order__field--last">
             <label for="commentary" class="form-order__label">Комментарий</label>
             <textarea
               class="form-order__textarea"
